--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.19",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
+    "svelte-navigator": "^3.2.2",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.0",
