--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "firebase": "^9.14.0"
   }
 }
